fix spacing in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,104 +1,88 @@
 .main-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #5B4373;
-
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #5B4373;
 }
-
 .img-avatar {
-  border-radius: 50%;
-  width: 10rem;
-  height: 10rem;
-  margin-top: 3rem;
+	border-radius: 50%;
+	width: 10rem;
+	height: 10rem;
+	margin-top: 3rem;
 }
-
 .intro-text {
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 4rem;
-  color: #FFDDCC;
-  margin: 1rem;
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 4rem;
+	color: #FFDDCC;
+	margin: 1rem;
 }
-
 .main-nav {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 3rem;
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 3rem;
 }
-
 .nav-link {
-  border-radius: 0.5rem;
-  background-color: #C091EF;
-  color: #5B4373;
-  padding: 0.5rem;
-  margin: 1rem;
-  text-decoration: none;
-  font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.25rem;
+	border-radius: 0.5rem;
+	background-color: #C091EF;
+	color: #5B4373;
+	padding: 0.5rem;
+	margin: 1rem;
+	text-decoration: none;
+	font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.25rem;
 }
-
 body {
-  position: relative;
-  min-height: 100%;
+	position: relative;
+	min-height: 100%;
 }
-
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-bottom: 5rem;
 }
-  
 #projects {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	gap: 1rem;
 }
-  
 .project-card {
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-
 .project-card header {
-  font-weight: bold;
+	font-weight: bold;
 }
-
-#about-me,
-#contact-me {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  margin: 1rem;
+#about-me,#contact-me {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+	margin: 1rem;
 }
-
 p {
-  font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
-
 h2 {
-  font-family: 'Shadows Into Light', cursive;
-  font-size: 2.5rem;
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 2.5rem;
 }
-
 footer {
-  background-color: #5B4373;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  height: 5rem;
-  width: 100%;
+	background-color: #5B4373;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	bottom: 0;
+	height: 5rem;
+	width: 100%;
 }
-
 .footer-text {
-  color:#C091EF;
+	color: #C091EF;
 }
